refactor: use custom github client for flexibility